--- a/time-slider/style.css
+++ b/time-slider/style.css
@@ -83,7 +83,7 @@
     width: 40px;
     height: 20px;
     position: absolute;
-    top: -6.2px;
+    top: 1px;
     margin-top: -28px;
     margin-left: -63px;
     border-radius: 3px;
@@ -92,7 +92,7 @@
     font-size: 10px;
     font-weight: 700;
     color: #FFFFFF;
-    padding-left: 2px;
+    padding-left: 6px;
     padding-top: 6px;
     text-align: center;
 }
@@ -100,7 +100,7 @@
     width: 40px;
     height: 20px;
     position: absolute;
-    top: -6.2px;
+    top: 1px;
     margin-top: -28px;
     margin-left: -63px;
     border-radius: 3px;
@@ -109,7 +109,7 @@
     font-size: 10px;
     font-weight: 700;
     color: #FFFFFF;
-    padding-left: 2px;
+    padding-left: 6px;
     padding-top: 6px;
     text-align: center;
 }
@@ -117,7 +117,7 @@
     width: 40px;
     height: 20px;
     position: absolute;
-    top: -6.2px;
+    top: 1px;
     margin-top: -28px;
     margin-left: -63px;
     border-radius: 3px;
@@ -126,21 +126,59 @@
     font-size: 10px;
     font-weight: 700;
     color: #FFFFFF;
-    padding-left: 2px;
+    padding-left: 6px;
     padding-top: 6px;
     text-align: center;
 }
 .flag::after{
     content: "";
     position: relative;
-    left:-18px;
-    top:-20px;
+    left:-19px;
+    top:14px;
     width: 0; 
     height: 0; 
     /* background: #005187; */
     border-top: #005187;
     border-left: 5px solid transparent;
     border-right: 5px solid transparent;
+    z-index: -5;
+}
+.hoverflag1::after{
+    content: "";
+    position: relative;
+    left:-19px;
+    top:19px;
+    width: 0; 
+    height: 0; 
+    /* background: #005187; */
+    border-top: 5px solid #005187;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    z-index: -5;
+}
+.hoverflag2::after{
+    content: "";
+    position: relative;
+    left:-19px;
+    top:19px;
+    width: 0; 
+    height: 0; 
+    /* background: #ccbc08; */
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top:5px solid #ccbc08;
+}
+.hoverflag3::after{
+    content: "";
+    position: relative;
+    left:-19px;
+    top:19px;
+    width: 0; 
+    height: 0; 
+    /* background: #3b8641; */
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 5px solid #3b8641;
     z-index: -5;
 }
 #select-1{
